# scrapgraph_enricher

./: .gitignore  README.md  main.py  pyproject.toml
src/models/: Evento.py  Eventos.py  Ingresso.py  Local.py  Promotor.py
src/services/: excel_generator.py  gemini_enricher.py
