[tool.poetry]
name = "poc-ecad-ia-captacao-shows-eventos-vs3"
version = "0.1.0"
description = "Um projeto de raspagem e enriquecimento de dados de eventos musicais."
authors = ["ronaldo <ronaldo-ramos@hotmail.com>"]
readme = "README.md"
packages = [{include = "src"}]
include = ["src"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
scrapegraphai = ">=0.15.0"
langchain-openai = ">=0.1.0"
langchain-community = ">=0.0.30"
langchain = ">=0.1.14"
beautifulsoup4 = ">=4.12.3"
playwright = ">=1.43.0"
html2text = ">=2024.2.26"
google-generativeai = ">=0.5.4"
pandas = ">=2.2.2"
openpyxl = ">=3.1.2"
python-dotenv = ">=1.0.1"
requests = ">=2.31.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
